refactor: domain category